--- a/style.css
+++ b/style.css
@@ -22,6 +22,13 @@ nav a {
   color: #333;
 }
 
+
+.titleFirstPage {
+  color: #000;
+  font-size: 50px;
+
+}
+
 .hero {
   height: 80vh;
   background: url('../assets/hero.jpg') center/cover no-repeat;
