--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ nav a {
 .titleFirstPage {
   color: #000;
   font-size: 50px;
-  text-shadow: 2px 2px white;
+  text-shadow: 1px 1px 10px white;
 }
 
 .hero {
@@ -74,7 +74,7 @@ nav a {
 
 .product-card img {
   width: 100%;
-  height: 220px;
+  height: 440px;
   object-fit: cover;
 }
 
