--- a/style.css
+++ b/style.css
@@ -48,6 +48,11 @@ nav a {
 }
 
 /* PRODUCTS PAGE */
+
+.productsTitle {
+    text-align: center;
+}
+
 .shop-layout {
   display: grid;
   grid-template-columns: 250px 1fr;
