--- a/style.css
+++ b/style.css
@@ -49,6 +49,11 @@ nav a {
 
 /* PRODUCTS PAGE */
 
+.divTitle {
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
+
 .productsTitle {
     text-align: center;
     font-size: 44px;
